<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StackOverflow</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_temanuevo">Temanuevo</string>
    <string name="title_activity_tema_buscar">TemaBuscar</string>
    <string name="title_activity_tema_info">TemaInfo</string>
    <string name="title_activity_tema_respuesta">TemaRespuesta</string>
    <string name="titulo">Titulo</string>
    <string name="latitud">Latitud</string>
    <string name="email">Email</string>
    <string name="respuesta">Respuesta</string>
    <string name="usuario">Usuario</string>
    <string name="longitud">Longitud</string>
    <string name="Titulo_tema">Titulo del Tema</string>
    <string name="Titulo_pregunta">Pregunta</string>
    <string name="responder">Responder</string>
    <string name="idtema">Id Tema:</string>
    <string name="prueba">Prubea</string>
    <string name="nuevo">Nuevo</string>
    <string name="info">Info</string>
    <string name="buscar">Buscar</string>
    <string name="titulo2">Titulo Contenido</string>
    <string name="title_activity_temas_row">Temas_row</string>
    <string name="textview">TextView</string>
    <string name="title_activity_detalle_tema">DetalleTema</string>
    <string name="temas">Temas</string>
    <string name="title_activity_web_view">WebView</string>
    <string name="menu_nuevo">Nuevo</string>
     <string name="menu_buscar">Buscar</string>
     <string name="ic_action_undo">Inicio</string>
     <string name="menu_ayuda">Ayuda</string>
     

</resources>
