<menu xmlns:android="http://schemas.android.com/apk/res/android" >

   
    
    <item
        android:id="@+id/menu_new"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_new"
        android:title="@string/menu_nuevo"/>
 
    <item
        android:id="@+id/menu_buscar"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_action_search"
        android:title="@string/menu_buscar"/>
	<item
        android:id="@+id/menu_atras"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_action_undo"
        android:title="@string/ic_action_undo"/>
	<item
        android:id="@+id/menu_ayuda"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_action_help"
        android:title="@string/menu_ayuda"/>
</menu>
