<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

   

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
             <TextView
        android:id="@+id/id_temaTtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:text="@string/idtema"
             />
             
             <TextView
        android:id="@+id/idtema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
      />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
             
            <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo" />

    <TextView
        android:id="@+id/txtTtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:text="@string/titulo2"
      />
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>
    </TableLayout>

    
    
</LinearLayout>
