<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DetalleTema" >

    <TextView
        android:id="@+id/idtema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />
    
    <TextView
        android:id="@+id/textView1"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/Titulo_tema" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />
    
     <TextView
        android:id="@+id/textView3"
         android:layout_marginTop="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/Titulo_pregunta" />
    
    <TextView
        android:id="@+id/pregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="35dp"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ListView
            android:id="@+id/listbuscar"
            android:layout_width="fill_parent"
            android:layout_height="286dp"
            android:layout_marginTop="90dp" >

        </ListView>
    </LinearLayout>

    <Button
        android:id="@+id/responder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textView1"
        android:background="#696969"
        android:onClick="responder"
        android:text="@string/responder"
        android:textColor="#FFFFFF" />

</RelativeLayout>